design-principles-02/src/main/java/com/farhad/example/design_principles02/lsp/demo1/good/Movable.java
package com.farhad.example.design_principles02.lsp.demo1.good;

public interface Movable {
	void goForward();
	void reverse();
}
